
	!!! Changed plugin.tx_solr.templateFile to plugin.tx_solr.templateFiles - notice the S at the end
	!!! Changed interface tx_solr_PluginCommand to expect an instance of tx_solr_pluginbase_CommandPluginBase as the parent plugin instead of tslib_pibase
	!!! Updated jQuery to v1.7.1, updated jQuery UI to v1.8.16, separated jQuery UI components, restructured javascript resources
	!! Changed the form command to use the tx_solr_CommandPluginAware interface to make form modifiers aware of the current plugin
	! Changed Index Queue tables to use InnoDB engine

	* Added Polish Translations, credits Jan Slusarczyk
	* Added initial API for Index Queue Item Indexing Properties
	* Added tx_solr_indexqueue_Item::getSite()
	* Changed logging of an invalid Index Queue request to also log the request object and Index Queue header
	* Changed logging of failed Index Queue page indexer requests to also log when invalid json was returned
	* Added method tx_solr_Site::getPages() to get all pages (page IDs) of a site
	* Refactored initialization of the Index Queue to be more modular and allow finer control over what goes into the Index Queue
	* Added a column in the Index Queue table to signal that an item has additional indexing properties
	* Added a column in the Index Queue indexing properties table to identify which site a property belongs to
	* Changed the Index Queue to also remove indexing properties for existing Index Queue items when clearing the queue
	* Added support for persisting indexing properties of Index Queue items
	* Added Index Queue support for resolving Mount Pages and adding them to the queue
	* Added lazy loading for Index Queue item record data
	* Added granular settings for logging Index Queue indexing
	* Fixed missing item_uid / record uid in tx_solr_indexqueue_Item
	* Added tx_solr_indexqueue_Item::hasIndexingProperty()
	* Fixed loading of Index Queue item indexing properties