@@ -17,8 +17,25 @@ plugin.tx_solr {
 		search = EXT:solr/resources/templates/pi_search/search.htm
 	}
 
+	javascriptFiles {
+		library = EXT:solr/resources/javascript/jquery/jquery-1.7.1.min.js
+
+		ui = EXT:solr/resources/javascript/jquery/jquery-ui-1.8.16.core.min.js
+
+		ui.autocomplete = EXT:solr/resources/javascript/jquery/jquery-ui-1.8.16.autocomplete.min.js
+
+		ui.datepicker    = EXT:solr/resources/javascript/jquery/jquery-ui-1.8.16.datepicker.min.js
+		ui.datepicker.de = EXT:solr/resources/javascript/jquery/ui-i18n/jquery.ui.datepicker-de.js
+		ui.datepicker.fr = EXT:solr/resources/javascript/jquery/ui-i18n/jquery.ui.datepicker-fr.js
+		ui.datepicker.nl = EXT:solr/resources/javascript/jquery/ui-i18n/jquery.ui.datepicker-nl.js
+
+		suggest = EXT:solr/resources/javascript/eid_suggest/suggest.js
+
+		faceting.limitExpansion = EXT:solr/resources/javascript/pi_results/results.js
+		faceting.dateRangeHelper = EXT:solr/resources/javascript/pi_results/date_range_facet.js
+	}
+
 	addDefaultCss = 1
-	addDefaultJs = 1
 
 	enableDebugMode = 0
 
@@ -309,19 +326,11 @@ plugin.tx_solr {
 
 	suggest = 0
 	suggest {
-		loadJQuery = 1
-
 		numberOfSuggestions = 10
 		suggestField = spell
 		forceHttps = 0
 
 		stylesheet = EXT:solr/resources/css/jquery-ui/jquery-ui.custom.css
-
-		javaScriptFiles {
-			library = EXT:solr/resources/javascript/jquery-1.4.2.min.js
-			ui      = EXT:solr/resources/javascript/jquery-ui-1.8.9.custom.min.js
-			suggest = EXT:solr/resources/javascript/eid_suggest/suggest.js
-		}
 	}
 
 	viewhelpers {
